# elysian-battle

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  SPEC.md
.github/workflows/: battle.yml  ci.yml
doc/: architecture.md  elysiandb-reference.md  test-scenarios.md
pr/: 001-project-skeleton-cli.md  2-git-build-pipeline.md  3-instance-lifecycle.md  4-http-tcp-clients.md  5-test-runner-reporting.md  6-health-suite.md  7-crud-suite.md
src/: builder.rs  cli.rs  client.rs  config.rs  git.rs  instance.rs  main.rs  port.rs  prerequisites.rs  report.rs  runner.rs  tcp_client.rs
src/suites/: acl.rs  auth.rs  crash_recovery.rs  crud.rs  edge_cases.rs  health.rs  hooks.rs  import_export.rs  kv.rs  migrations.rs  mod.rs  nested.rs  performance.rs  query.rs  query_params.rs  schema.rs  tcp.rs  transactions.rs
