[package]
name = "elysian-battle"
version = "0.1.0"
edition = "2021"
description = "Comprehensive integration test harness and regression guard for ElysianDB"
license = "MIT"
rust-version = "1.75"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "cookies"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
clap = { version = "4", features = ["derive"] }
dialoguer = "0.11"
console = "0.15"
indicatif = "0.17"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tabled = "0.16"
async-trait = "0.1"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
strip = true
